# pdal-parallelizer

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  README.rst  __main__.py  base.py  config.json  config_dev.json  do.py  environment.yml  requirements.txt  setup.cfg  setup.py  test.py  tile.py
.github/: dependabot.yml
.github/workflows/: python-publish.yml  python-test.yml
conda/: bld.bat  meta.yaml
docs/: index.rst
docs/source/: api.rst  cli.rst  conf.py  index.rst  installtion.rst  intro.rst  usage.rst
examples/: README.rst
examples/process-copc/: config.json  pipeline.json
examples/process-pipelines/: config.json  pipeline.json
pdal_parallelizer/: __main__.py  do.py  file_manager.py
src/: __main__.py  pipeline.json  test.py
src/pdal_parallelizer/: __init__.py  __main__.py  base.py  bounds.py  cloud.py  copc.py  do.py  file_manager.py  pipeline_wrapper.py  tile.py
src/pdal_parallelizer/pdal_parallelizer_cli/: __main__.py
test/data/: pipeline.json
test/data/input/: echantillon_10pts2.laz
test/data/output/: output.laz
test/data/temp/: temp__echantillon_10pts.pickle  temp__temp_name.pickle  temp_name.pickle
tests/: test.py
