[metadata]
name = pdal-parallelizer
version = 2.1.3
description = A simple tool for use pdal with parallel execution
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = pdal, parallelizer, dask
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
install_requires =
    click
    pdal
    PDAL
    dask
    distributed
    twine
    pandas
    matplotlib
    pyproj

[options.entry_points]
console_scripts =
    pdal-parallelizer = pdal_parallelizer.pdal_parallelizer_cli.__main__:main

[options.packages.find]
where = src