[metadata]
name = pdal-parallelizer
version = 2.1.0
description = A simple tool for use pdal with parallel execution
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = pdal, parallelizer, dask
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
install_requires =
    click<=8.1.3
    pdal<=3.2.2
    dask<=2023.4.0
    distributed<=2023.7.0
    twine<=4.0.2
    pandas<=1.5.3
    pyproj<=3.5.0
    numpy<=1.24.2


[options.entry_points]
console_scripts =
    pdal-parallelizer = pdal_parallelizer.pdal_parallelizer_cli.__main__:main

[options.packages.find]
where = src